Fixed wav volume control.